2004-02-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/faq.xml: Typo. Add startup druid question.

2004-02-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py (GedcomParser.parse_individual): handle event
	description
	* src/ImageSelect.py: disable double click to edit in a gallery

2004-02-06  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/*.xml: Replace &app; with gramps inside
	the title tag.

2004-02-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Define handler for the gallery's Edit button.
	* src/EditSource.py: Connect callback to the gallery's Edit button.
	* src/ImageSelect.py: Remember old photo list.
	* src/EditPlace.py: Revert photos on Cancel.
	* src/EditPerson.py: Revert photos on Cancel.
	* src/Marriage.py: Revert photos on Cancel.
	* doc/gramps-manual/ru/*.xml: Replace &app; with GRAMPS inside
	the title tag.
	* doc/gramps-manual/C/*.xml: Replace &app; with GRAMPS inside
	the title tag.

2004-02-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/Merge.py (gen_key,name_compare): 
	Fall back to not using soundex if the charset can't be latin-1 encoded.
	* src/plugins/soundgen.py: Fall back to empty input.
	* src/plugins/rel_ru.py: Add more possible russian LANG values.
	* src/EditPlace.py: Pass window to the Gallery.
	* src/ImageSelect.py: Run modal dialog, using parent window.
	* src/imagesel.glade: Define proper button responses.

2004-02-05  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/cmdline.xml: Update.
	* doc/gramps-manual/fr/filtref.xml: Update.
	* doc/gramps-manual/fr/mainwin.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.

2004-02-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/template.po: Update translation template.
	* doc/gramps-manual/ru/filtref.xml: Update.
	* doc/gramps-manual/ru/getstart.xml: Update.
	* doc/gramps-manual/ru/gramps-manual.xml: Update.
	* doc/gramps-manual/ru/mainwin.xml: Update.