@@ -17,7 +17,7 @@
 
       <!-- =============== Appendices Subsection ================ -->
       <sect2 id="faq">
-      <title>ЧАсто задаваемые Вопросы</title>
+      <title>ЧАсто задаваемые ВОпросы</title>
       <para>Это приложение содержит список вопросов, часто возникающих в форумах 
       и дискуссиях по спискам рассылки. Этот список никоим образом не является полным. 
       Если Вы хотите добавить вопросы/ответы к этому списку, пожалуйста пошлите Ваши 
@@ -213,6 +213,18 @@ type="mailto">gramps-devel@lists.sf.net</ulink>
       после выпуска версии 1.0. Поддержка полноценной базы данных буддет встроена
       в следующую стабильную версию (1.2), что должно существенно улучшить 
       характеристики работы, как по скорости, так и по использованию памяти. 
+      </para></listitem>
+      </varlistentry>
+
+      <varlistentry><term>Я хочу запустить первоначальный диалог (друид). 
+      Как мне это сделать?</term>
+      <listitem><para> 
+      &app; хранит флажок в базе данных конфигурации Gnome, отмечающий, что 
+      первоначальный диалог уже был запущен. Чтобы заставить &app; запустить
+      его ещё раз, надо сбросить этот флажок. Это можно сделать следующей командой:
+      </para>
+      
+      <para><command>gconftool-2 -u /apps/gramps/startup</command>
       </para></listitem>
       </varlistentry>
 
